@@ -16,6 +16,9 @@
 	   "Wingman::Plugin::EmailAllAdmins" : {
 		"phase" : "EmailAllAdmins",
 	   },
+	   "Wingman::Plugin::EmailAllUsers" : {
+		"phase" : "EmailAllUsers",
+	   },
         }
     },
     "aws" : {
