@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-11-30
+ * Added an EmailAllUsers wingman job.
+
 2020-11-23
  * Added wing.format_datetime() to wing.vue.js.
 
